--- a/templates/default.html
+++ b/templates/default.html
@@ -14,10 +14,10 @@
         <header>
             <nav>
               <ul>
-                <li><a href="/">About me</a></li>
-                <li><a href="/archive.html">Archive</a></li>
-                <li><a href="/projects.html">Projects</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/">about me</a></li>
+                <li><a href="/archive.html">archive</a></li>
+                <li><a href="/projects.html">projects</a></li>
+                <li><a href="/contact.html">contact</a></li>
               </ul>
             </nav>
         </header>
