--- a/templates/default.html
+++ b/templates/default.html
@@ -13,15 +13,15 @@
             <nav>
               <ul>
                 <li><a href="/">about me</a></li>
-                <li><a href="/archive.html">archive</a></li>
-                <li><a href="/projects.html">projects</a></li>
+                <li><a href="/publications.html">publications</a></li>
+                <li><a href="/archive.html">posts</a></li>
                 <li><a href="/contact.html">contact</a></li>
               </ul>
             </nav>
         </header>
 
         <main role="main">
-            <h1>$title$</h1>
+            <h1 class="page-title">$title$</h1>
             $body$
         </main>
     </body>
