--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,11 @@
 body{
-  padding: 2em 15% 2em 15%;
+  padding: 2em 20% 2em 20%;
   font-family: monospace;
+}
+
+.header {
+  padding: 0 20% 2em 20%;
+  text-align: center; 
 }
 
 a {
@@ -66,6 +71,7 @@ header nav {
 
 main h1.page-title {
   font-size: 2.5em;
+  text-align: center;
 }
 
 main h1 {
